# driip-home

./: .env.example  BACKEND.md  BACKEND_PLAN.md  HOME.md  Makefile  PANEL.md  README.md  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json
app/: app.vue
backend/: .dockerignore  .env.docker  .env.example  Dockerfile  README.md  (+1 more)
driip-rust/: .env.example  .env.prod.example  .gitignore  Cargo.toml  Dockerfile.dev  HELP.md  MIGRATIONS.md  Makefile  README.md  deploy.sh  docker-compose.yml  test-api.sh
driip-rust/.sqlx/: query-108e0d2afa8a9c5493b012fde6697983eaa0d14cd2c12b960d20e37cdaa8a939.json  query-1eef1ec5ea48d7f52d4367cf7ee268bfe3e3b3bdeba248cf4960fb0cf60cd03f.json  query-2733c7d527a32d999ada157ded917b9b185b4b4792cff0ad08554377619baf6f.json  query-2c9877a07a280e11e0e46d596405b9e197c44ecd13653edd14f18d2906030617.json  query-31432bea3bd17fd791de9801eb3ef714b55547df25ee9d163d3b3ccfabb0e1f8.json  query-3847d539d757c063d42703f6f81981ec4a8127b6f7a99f6a0fe9924d759853a5.json  query-43bed0152ce4a40734040f69da2af47038d7274d503935d943eaaac3b2d4424a.json  query-453e7a1e7d18e6dc0d80698429162bdf13f4e444a3fc86216ad96552979264f0.json  query-49ba080583563b5f771714bbce77b951b9745163b8bb17d316fa682a2923b13f.json  query-4b377ec9c8c7f5c57ede8f2206c24a2f2a2f9df1fa6601bb0b6010ef244d531a.json  query-4c820dbec2ee9381df751d4f2db4e033884b2c2759efee0cfa4de238306a2407.json  query-4cfbfde6b4f8cbcbced1f1eab3eae8eb4b7a5d6a46d2d287142d54ff3df212ac.json  query-5e7c27f190a78651814eb730d006cf4f529066e3fdcd148469bd7d31a86f21ec.json  query-602f858180f3af84596043b2591216b604637b23268093a0e3ef41b7da9f1820.json  query-7f7554161940ae7affe08d3168e4753d86fe5da2d91270711238c297ec531605.json  query-801d1ffd2883ebca72475f79486eeac82b84e7b9c8ae626c476b89c879093135.json  query-8581cdc13e0cb5d9db07db9269c43f8a28a120585cde92fc7a7aabdd9fd93ccd.json  query-9dc076ca0a7ace04d2e9b8d9b41f5e028be2666911046191006dfc28cc6059ca.json  query-a62e14d7351c2ca38f2fb8bcb3f4d731dd648cefb5604c7875bdd16a2f4cf37d.json  query-a8689296530d0d4edf7c7c1c2c2b3db8bde3bd1a18e9f690a64ab9e9d88af8d5.json  query-affd0a3d3606526040ca277267757a6bdf01fd9405e899b16e092ec95e151a60.json  query-ba4cf2d80751f49dda6e4106cdfd917d3bc6e22aa575a0cbe1714661b03874a4.json  query-c608acc4046ad6641cefd7abaf1528c561fc8b4c2109b0e0a73936a8db3fccfc.json  query-c7546b7f9291dd868b2a42b397da017a111d5122ef50adefeb9c8fada759c1f2.json  query-c94850fb405fcc024270421a1b6a4314ecb217144caeedae91536486a380a3c4.json  query-cb8991543c243db611b6a755ae94ce0b59047fe903b180bdd3d0ea5219d3d9c7.json  query-d90e827506210818da1c040a1f85d671c69d98ba6d44a8957adac015f9510150.json  query-e3387bb223a30b739b247be41c3027846fb5d080b2faea6a665c007765e9fd2e.json  query-e57cd5cb74510668dcd68a9ea2feb2b93d271f2c16076bba4ae9db46b271bfab.json  query-e5f0d12ae26acf320c31b83d249d189b04b75af4c670c6f02ba3267e530b04fb.json  query-ee93241df163c78e18041506c3147441fda3e2d8653edf2c88c6eb7b477953d2.json  query-fa5506619c1c139838c4c620349342d6eff68e6c0c08e8a6ead8d4e1f1591a0e.json  query-fb27622b912cba67432c463c658f1f94087bfe17772954ecc2d137bde20fc993.json  query-fd5ceed396704b55268e6c65846c7a61b7fbfa6eb1ec0aca6b9f3047350fc26d.json
driip-rust/migrations/: 0001_identity.sql  0002_core_tables.sql  0003_fulfillment.sql  0004_inventory_order_link.sql  0005_purchase_orders.sql  0006_customer_auth.sql  0007_address.sql  0008_home_integration.sql  0009_payments.sql  0010_media_storage.sql  0011_media_relations.sql
driip-rust/src/: auth.rs  cache.rs  config.rs  db.rs  errors.rs  health.rs  http_handler.rs  lib.rs  main.rs  state.rs
driip-rust/src/domain/: mod.rs
driip-rust/src/domain/address/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
driip-rust/src/domain/customer/: handler.rs  mod.rs  model.rs  repository.rs
driip-rust/src/domain/fulfillment/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
driip-rust/src/domain/identity/: handler.rs  mod.rs  model.rs  repository.rs
driip-rust/src/domain/inventory/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
driip-rust/src/domain/media/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
driip-rust/src/domain/notification/: handler.rs  mod.rs  model.rs  repository.rs
driip-rust/src/domain/order/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
driip-rust/src/domain/payment/: handler.rs  mod.rs  model.rs
driip-rust/src/domain/product/: handler.rs  model.rs  repository.rs
driip-rust/src/domain/public/: address_handler.rs  auth_handler.rs  customer_handler.rs  mod.rs  order_handler.rs
driip-rust/src/domain/purchase_order/: handler.rs  mod.rs  model.rs  repository.rs
driip-rust/src/domain/staff/: handler.rs  model.rs  repository.rs
driip-rust/src/domain/support/: handler.rs  mod.rs  model.rs  repository.rs
driip-rust/src/domain/warehouse/: handler.rs  mod.rs  model.rs  repository.rs
driip-rust/src/integrations/: mod.rs
driip-rust/src/integrations/ghtk/: client.rs  error.rs  mod.rs  models.rs
driip-rust/src/integrations/stripe/: client.rs  mod.rs  models.rs  webhook.rs
driip-rust/src/middleware/: audit.rs  mod.rs  rate_limit.rs  sanitize.rs  security_headers.rs
driip-rust/tests/: README.md  api_integration.test.ts  package.json  run-tests.sh  tsconfig.json
(+804 files in other folders)
